# wtf-i-like-this

./: .editorconfig  CHANGELOG.md  Justfile  README.md  go.mod  go.sum  main.go  package-lock.json  package.json
.github/workflows/: deploy.yml  release.yml  test.yml
.old/: next.config.js  tsconfig.json
.old/components/: TrackGenres.tsx
.old/models/: apiResponses.ts
.old/pages/: app.scss  index.tsx
.old/pages/api/: genres.ts  playlistGenres.ts
.old/util/: utils.ts
backend/: Cargo.toml  Config.example.toml  Dockerfile
backend/src/: main.rs  spotify.rs  url_parser.rs
components/: PlaylistGenres.tsx
frontend/: .prettierrc  Dockerfile  eslint.config.js  package.json
frontend/src/: app.html  colors.scss  types.ts
frontend/src/routes/: +page.svelte
internal/: core.go
internal/spotify/: spotify.go
internal/url_parser/: url_parser.go  url_parser_test.go
legacy/backend/: .dockerignore  .gitignore
legacy/backend/src/: main.rs
legacy/frontend/: .dockerignore  .env.example  README.md
models/: apiResponses.ts
pages/: _app.tsx  index.module.scss  index.tsx
pages/api/: genres.ts
util/: colors.scss  parser.ts  utils.ts
util/api/: config.ts  spotify.ts
web/static/: style.css
web/templates/: genres.html  index.html
