[package]
name = "backend"
version = "1.0.3"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rspotify = { version = "0.11", features = ["env-file"] }
futures = "0.3"
thiserror = "1"
itertools = "0.11.0"
regex = "1.8.4"
once_cell = "1.18.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
tower-http = { version = "0.3.4", features = ["trace", "cors"] }
tracing = "0.1.37"
config = "0.13.3"
reqwest = "0.11.20"

[dev-dependencies]
rstest = "0.17.0"

[dependencies.openssl]
version = "0.10.70"
features = [
    "vendored"
]
